--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,3 @@
-Netlify 배포 및 함수 설정을 위한 파일[build]Netlify가 서버리스 함수를 찾을 디렉토리를 지정합니다.functions = "netlify/functions"
+Netlify 배포 및 함수 설정을 위한 파일
+[build]
+functions = "netlify/functions"
